Move to SpringBoot 2.7.0