@@ -108,8 +108,8 @@
             <name>Michael Schmut</name>
             <email>smudo99@users.sourceforge.net</email>
             <url>https://sourceforge.net/users/smudo99</url>
-            <organization>IBM</organization>
-            <organizationUrl>http://www.ibm.com</organizationUrl>
+            <organization>SAP</organization>
+            <organizationUrl>http://www.sap.com</organizationUrl>
             <timezone>+2</timezone>
             <roles>
                 <role>Java Developer</role>
@@ -507,6 +507,8 @@
     <properties>
         <!-- used by surefire plugin in combination with jacoco -->
         <argLine><![CDATA[-Dcatalina.base=${project.build.directory}
+        --enable-preview
+        -Dsurefire.skipAfterFailureCount=1
         -Dorg.springframework.restdocs.outputDir=./target/generated-snippets
         -Ddocumentation.dir=./target
         -Dorg.jboss.logging.provider=slf4j
@@ -538,41 +540,40 @@
         <aspectj.version>1.9.7</aspectj.version> <!-- Keep in sync with boot -->
         <commons-collections.version>3.2.2</commons-collections.version> <!-- This is bound to Dozer / Eureka Client -->
         <dozer.version>6.5.2</dozer.version>
-        <feign-httpclient.version>10.10.1</feign-httpclient.version> <!-- Keep in sync with spring-cloud-openfeign-dependencies -->
-        <hystrix-javanica.version>1.5.18</hystrix-javanica.version> <!-- Keep in sync with spring-cloud-netflix-hystrix -->
-        <junit-platform-surefire-provider.version>1.3.2</junit-platform-surefire-provider.version>
-        <logstash-logback-encoder.version>7.0.1</logstash-logback-encoder.version>
-        <logback.version>1.2.10</logback.version>
-        <postgresql.version>42.3.1</postgresql.version> <!-- Keep in sync with Boot -->
+        <feign-httpclient.version>11.8</feign-httpclient.version> <!-- Keep in sync with spring-cloud-openfeign-dependencies -->
+        <logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
+        <logback.version>1.2.11</logback.version> <!-- Keep in sync with boot -->
+        <modulith.version>1.3.0</modulith.version>
+        <postgresql.version>42.3.5</postgresql.version> <!-- Keep in sync with Boot -->
+        <querydsl.version>5.0.0</querydsl.version>
 
-        <spring-boot.version>2.6.3</spring-boot.version>
-        <spring-data-envers.version>2.6.0</spring-data-envers.version>
-        <spring-restdocs-mockmvc.version>2.0.5.RELEASE</spring-restdocs-mockmvc.version>
-        <spring-framework.version>5.3.15</spring-framework.version> <!-- Keep in sync with boot -->
+        <spring-boot.version>2.7.0</spring-boot.version>
+        <spring-data-envers.version>2.7.0</spring-data-envers.version>
+        <spring-restdocs-mockmvc.version>2.0.6.RELEASE</spring-restdocs-mockmvc.version>
+        <spring-framework.version>5.3.20</spring-framework.version> <!-- Keep in sync with boot -->
         <start-class></start-class> <!-- keep it empty, set by actual boot module -->
 
         <!--   Plugin versions   -->
         <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
-        <asciidoctor-maven-plugin.version>2.2.1</asciidoctor-maven-plugin.version>
+        <asciidoctor-maven-plugin.version>2.2.2</asciidoctor-maven-plugin.version>
         <aspectj-maven-plugin.version>1.14.0</aspectj-maven-plugin.version>
-        <jacoco-maven-plugin.version>0.8.8-SNAPSHOT</jacoco-maven-plugin.version>
-        <jib-maven-plugin.version>3.1.4</jib-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.9-SNAPSHOT</jacoco-maven-plugin.version>
+        <jib-maven-plugin.version>3.2.1</jib-maven-plugin.version>
         <git-commit-id-plugin.version>4.9.10</git-commit-id-plugin.version> <!-- Keep in sync with boot -->
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version> <!-- Keep in sync with boot -->
+        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version> <!-- Keep in sync with boot -->
         <maven-enforcer-plugin.version>3.0.0</maven-enforcer-plugin.version> <!-- Keep in sync with boot -->
-        <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version> <!-- Keep in sync with boot -->
+        <maven-failsafe-plugin.version>3.0.0-M6</maven-failsafe-plugin.version> <!-- Keep in sync with boot -->
         <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
         <maven-jar-plugin.version>3.2.2</maven-jar-plugin.version> <!-- Keep in sync with boot -->
-        <maven-javadoc-plugin.version>3.3.1</maven-javadoc-plugin.version>
+        <maven-javadoc-plugin.version>3.4.0</maven-javadoc-plugin.version>
         <maven-project-info-reports-plugin.version>3.1.2</maven-project-info-reports-plugin.version>
         <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version> <!-- Keep in sync with boot -->
         <maven-scm-publish-plugin.version>3.1.0</maven-scm-publish-plugin.version>
-        <maven-site-plugin.version>3.9.1</maven-site-plugin.version>
+        <maven-site-plugin.version>3.12.0</maven-site-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version> <!-- Keep in sync with boot -->
-        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
-        <maven-surefire-report-plugin.version>3.0.0-M5</maven-surefire-report-plugin.version>
-        <surefire-junit47.version>3.0.0-M5</surefire-junit47.version>
-        <versions-maven-plugin.version>2.8.1</versions-maven-plugin.version> <!-- Keep in sync with boot -->
+        <maven-surefire-plugin.version>3.0.0-M6</maven-surefire-plugin.version>
+        <maven-surefire-report-plugin.version>3.0.0-M6</maven-surefire-report-plugin.version>
+        <versions-maven-plugin.version>2.10.0</versions-maven-plugin.version> <!-- Keep in sync with boot -->
         <wagon-ftp.version>3.4.3</wagon-ftp.version>
         <wagon-ssh.version>3.4.3</wagon-ssh.version>
     </properties>
@@ -765,6 +766,11 @@
                         <optimize>true</optimize>
                         <parameters>true</parameters>
                         <release>${java.version}</release>
+                        <compilerArgs>
+                            <compilerArg>
+                                --enable-preview
+                            </compilerArg>
+                        </compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -975,7 +981,7 @@
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
                     <version>${jacoco-maven-plugin.version}</version>
-                    <executions>
+                    <!--executions>
                         <execution>
                             <goals>
                                 <goal>prepare-agent</goal>
@@ -988,7 +994,7 @@
                                 <goal>report</goal>
                             </goals>
                         </execution>
-                    </executions>
+                    </executions-->
                 </plugin>
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
@@ -1046,9 +1052,24 @@
                 <version>${commons-collections.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.netflix.hystrix</groupId>
-                <artifactId>hystrix-javanica</artifactId>
-                <version>${hystrix-javanica.version}</version>
+                <groupId>com.querydsl</groupId>
+                <artifactId>querydsl-apt</artifactId>
+                <version>${querydsl.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.querydsl</groupId>
+                <artifactId>querydsl-core</artifactId>
+                <version>${querydsl.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.querydsl</groupId>
+                <artifactId>querydsl-collections</artifactId>
+                <version>${querydsl.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.querydsl</groupId>
+                <artifactId>querydsl-jpa</artifactId>
+                <version>${querydsl.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.tngtech.archunit</groupId>
@@ -1148,11 +1169,6 @@
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-envers</artifactId>
                 <version>${spring-data-envers.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.platform</groupId>
-                <artifactId>junit-platform-surefire-provider</artifactId>
-                <version>${junit-platform-surefire-provider.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
